--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "autoprefixer": "^10.4.13",
+    "clsx": "^1.2.1",
+    "doodle-icons": "^1.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "lucide-react": "^0.105.0-alpha.4",
     "next": "13.1.1",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
