--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^0.1.6",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "doodle-icons": "^1.1.0",
