--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -24,5 +25,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^17.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.1"
   }
 }
