--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@vercel/analytics": "^0.1.6",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
