--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
