--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
     "husky": "^8.0.3",
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.1"
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "typescript": "4.9.5"
   }
 }
