--- a/package.json
+++ b/package.json
@@ -11,30 +11,43 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
+    "@auth/drizzle-adapter": "^0.5.0",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/react-dom": "^18.2.18",
     "@vercel/analytics": "^0.1.6",
+    "@vercel/blob": "^0.20.0",
+    "@vercel/postgres": "^0.7.2",
     "autoprefixer": "^10.4.13",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "doodle-icons": "^1.1.0",
+    "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.29.3",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^14.1.0",
+    "iron-session": "^8.0.1",
     "lucide-react": "^0.105.0-alpha.4",
-    "next": "13.1.1",
+    "next": "^14.1.0",
+    "pg": "^8.11.3",
     "postcss": "^8.4.20",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postgres": "^3.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
     "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.2.51",
+    "drizzle-kit": "^0.20.14",
     "husky": "^8.0.3",
-    "lint-staged": "^13.0.4",
+    "lint-staged": "^15.2.1",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "typescript": "4.9.5"
+    "typescript": "^5.3.3"
   }
 }
