feat: db and shit

--- a/package.json
+++ b/package.json
@@ -29,20 +29,22 @@
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
     "eslint": "8.30.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.2.5",
     "iron-session": "^8.0.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.105.0-alpha.4",
-    "next": "^14.1.0",
+    "next": "^14.2.5",
     "pg": "^8.11.3",
     "postcss": "^8.4.33",
     "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "use-sound": "^4.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
