--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "prepare": "husky install",
-    "preview": "opennextjs-cloudflare && wrangler dev",
-    "deploy": "opennextjs-cloudflare && wrangler deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.5.0",
@@ -52,7 +49,6 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
-    "@opennextjs/cloudflare": "^0.5.11",
     "@types/node": "18.15.0",
     "@types/react": "^18.2.51",
     "drizzle-kit": "^0.20.14",
@@ -60,7 +56,6 @@
     "lint-staged": "^15.2.1",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "typescript": "^5.3.3",
-    "wrangler": "^4.0.0"
+    "typescript": "^5.3.3"
   }
 }
